BUG: Fix the header text being invisible in the wheel of fortune item set config

--- a/src/fortune_wheel/fortune_wheel_item_set.scss
+++ b/src/fortune_wheel/fortune_wheel_item_set.scss
@@ -3,6 +3,10 @@
 
 	gap: var(--gap);
 
+	.screen-hgroup {
+		color: black;
+	}
+
 	.button-tooltip {
 		--tooltip-gap: var(--gap);
 	}
